# HOLYBeagle

./: CMakeLists.txt  main.c
0_bat/: auto.sh  build.sh
0_src/: main.cpp
0_src/tcp/: TCPPackageHandler.cpp  TCPPackageHandler.h
1_src/: main.cpp
1_src/tcp/: TCPClientHandler.cpp  TCPClientHandler.h  TCPPackageHandler.cpp  TCPPackageHandler.h  TCPServerHandler.cpp  TCPServerHandler.h
5_cross/: CMakeLists.txt
6_tool/: build.sh  clean.sh  transfer.sh
